[package]
name = "hanako-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rocket Webserver
rocket = "0.5.0-rc.1"
rocket_contrib = "0.4.10"

# Powerful date and time functionality
chrono = "0.4.19"

# For connecting with the MySQL database
diesel = "1.4.8"

# Lazy static initialization
lazy_static = "1.4.0"

# Serialization/Deserialization
serde_json = "1.0.73"
serde = "1.0.132"
serde_derive = "1.0.132"
